[gd_scene load_steps=4 format=3 uid="uid://du2l7vagxie21"]

[ext_resource type="Script" path="res://scenes/ui/hud/hud.gd" id="1_lqesc"]
[ext_resource type="Texture2D" uid="uid://dadtueych1h76" path="res://assets/ui/heart.png" id="1_vvice"]
[ext_resource type="Texture2D" uid="uid://elmvc0lomivc" path="res://assets/ui/boss_heart.png" id="2_x4gga"]

[node name="Hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lqesc")
metadata/_edit_vertical_guides_ = [210.0]
metadata/_edit_horizontal_guides_ = [64.0, 360.0, 212.0]

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 420.0
offset_bottom = 64.0
color = Color(0, 0, 0, 1)

[node name="Base" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 420.0
offset_bottom = 64.0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 15

[node name="ContainerBase" type="HBoxContainer" parent="Base"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HeartContainersBase" type="VBoxContainer" parent="Base/ContainerBase"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="PlayerHeartContainer" type="HBoxContainer" parent="Base/ContainerBase/HeartContainersBase"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 4

[node name="Label" type="Label" parent="Base/ContainerBase/HeartContainersBase/PlayerHeartContainer"]
custom_minimum_size = Vector2(34, 12)
layout_mode = 2
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 8
text = "YOU
"
vertical_alignment = 1
uppercase = true

[node name="heart_1" type="TextureRect" parent="Base/ContainerBase/HeartContainersBase/PlayerHeartContainer"]
layout_mode = 2
texture = ExtResource("1_vvice")
expand_mode = 2
stretch_mode = 4

[node name="heart_2" type="TextureRect" parent="Base/ContainerBase/HeartContainersBase/PlayerHeartContainer"]
layout_mode = 2
texture = ExtResource("1_vvice")
expand_mode = 2
stretch_mode = 4

[node name="heart_3" type="TextureRect" parent="Base/ContainerBase/HeartContainersBase/PlayerHeartContainer"]
layout_mode = 2
texture = ExtResource("1_vvice")
expand_mode = 2
stretch_mode = 4

[node name="heart_4" type="TextureRect" parent="Base/ContainerBase/HeartContainersBase/PlayerHeartContainer"]
layout_mode = 2
texture = ExtResource("1_vvice")
expand_mode = 2
stretch_mode = 4

[node name="heart_5" type="TextureRect" parent="Base/ContainerBase/HeartContainersBase/PlayerHeartContainer"]
visible = false
layout_mode = 2
texture = ExtResource("1_vvice")
expand_mode = 2
stretch_mode = 4

[node name="BossHeartContainer" type="HBoxContainer" parent="Base/ContainerBase/HeartContainersBase"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 4

[node name="Label" type="Label" parent="Base/ContainerBase/HeartContainersBase/BossHeartContainer"]
visible = false
custom_minimum_size = Vector2(34, 12)
layout_mode = 2
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 8
text = "BOSS"
vertical_alignment = 1
uppercase = true

[node name="heart_1" type="TextureRect" parent="Base/ContainerBase/HeartContainersBase/BossHeartContainer"]
visible = false
layout_mode = 2
texture = ExtResource("2_x4gga")
expand_mode = 2
stretch_mode = 4

[node name="heart_2" type="TextureRect" parent="Base/ContainerBase/HeartContainersBase/BossHeartContainer"]
visible = false
layout_mode = 2
texture = ExtResource("2_x4gga")
expand_mode = 2
stretch_mode = 4

[node name="heart_3" type="TextureRect" parent="Base/ContainerBase/HeartContainersBase/BossHeartContainer"]
visible = false
layout_mode = 2
texture = ExtResource("2_x4gga")
expand_mode = 2
stretch_mode = 4

[node name="heart_4" type="TextureRect" parent="Base/ContainerBase/HeartContainersBase/BossHeartContainer"]
visible = false
layout_mode = 2
texture = ExtResource("2_x4gga")
expand_mode = 2
stretch_mode = 4

[node name="heart_5" type="TextureRect" parent="Base/ContainerBase/HeartContainersBase/BossHeartContainer"]
visible = false
layout_mode = 2
texture = ExtResource("2_x4gga")
expand_mode = 2
stretch_mode = 4

[node name="heart_6" type="TextureRect" parent="Base/ContainerBase/HeartContainersBase/BossHeartContainer"]
visible = false
layout_mode = 2
texture = ExtResource("2_x4gga")
expand_mode = 2
stretch_mode = 4

[node name="heart_7" type="TextureRect" parent="Base/ContainerBase/HeartContainersBase/BossHeartContainer"]
visible = false
layout_mode = 2
texture = ExtResource("2_x4gga")
expand_mode = 2
stretch_mode = 4

[node name="heart_8" type="TextureRect" parent="Base/ContainerBase/HeartContainersBase/BossHeartContainer"]
visible = false
layout_mode = 2
texture = ExtResource("2_x4gga")
expand_mode = 2
stretch_mode = 4

[node name="heart_9" type="TextureRect" parent="Base/ContainerBase/HeartContainersBase/BossHeartContainer"]
visible = false
layout_mode = 2
texture = ExtResource("2_x4gga")
expand_mode = 2
stretch_mode = 4

[node name="heart_10" type="TextureRect" parent="Base/ContainerBase/HeartContainersBase/BossHeartContainer"]
visible = false
layout_mode = 2
texture = ExtResource("2_x4gga")
expand_mode = 2
stretch_mode = 4

[node name="ItemContainer" type="HBoxContainer" parent="Base/ContainerBase"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/separation = 12
alignment = 2

[node name="Label" type="Label" parent="Base/ContainerBase/ItemContainer"]
layout_mode = 2
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 8
text = "HEALS"
vertical_alignment = 1
uppercase = true

[node name="HealCount" type="Label" parent="Base/ContainerBase/ItemContainer"]
layout_mode = 2
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 8
text = "4
"
vertical_alignment = 1
uppercase = true
